@@ -43,3 +43,4 @@ importFrom(stats,dist)
 importFrom(stats,integrate)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
+useDynLib(polyCub,C_polygauss)
