@@ -38,7 +38,7 @@ large, the result becomes inaccurate, see
 \examples{
 circleCub.Gauss(center=c(1,2), r=3, mean=c(4,5), sd=6)
 
-if (gpclibPermit()) {
+if (requireNamespace("mvtnorm") && gpclibPermit()) {
   ## compare with cubature over a polygonal approximation of a circle
   disc.poly <- spatstat::disc(radius=3, centre=c(1,2), npoly=32)
   polyCub.exact.Gauss(disc.poly, mean=c(4,5), Sigma=6^2*diag(2))
